--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,14 @@
 <p>dashboard works!</p>
 
-<div #container>
-    <hello>hi</hello>
-    <p>
-      Start editing to see some magic happen :)
-    </p>
-  </div>
+<button type="button" class="btn logout" (click)="auth.SignOut()">
+    <i class="fab fa-google-plus-g"></i>
+    SignOut
+</button>
+
+<div class="container mt-3">
+    <div class="row justify-content-center">
+        <div #editable class="col-8" style="min-height:85vh">
+
+        </div>
+    </div>
+</div>
