got shit to save on signout

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <p>dashboard works!</p>
 
-<button type="button" class="btn logout" (click)="auth.SignOut()">
+<button type="button" class="btn logout" (click)="signOut()">
     <i class="fab fa-google-plus-g"></i>
     SignOut
 </button>
