added helpful note...

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<p>dashboard works!</p>
+<p>Click below and enter text in the medium editor!</p>
 
 <button type="button" class="btn logout" (click)="signOut()">
     <i class="fab fa-google-plus-g"></i>
